--- a/style.css
+++ b/style.css
@@ -16,4 +16,10 @@ html, body {
   height: 100vh;
   width: 100vw;
   background-color: red;
+  position: relative;
+}
+#page1>video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
