--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
   margin: 0%;
   box-sizing: border-box;
 }
-html, body {
+html,
+body {
   font-size: 62.5%;
   height: 100%;
   width: 100%;
@@ -12,13 +13,16 @@ html, body {
   position: relative;
   overflow: hidden;
 }
+@font-face {
+  font-family: a;
+  src: url('./fonts/jost-variable.ttf');
+}
 #page1 {
   height: 100vh;
   width: 100vw;
-  background-color: red;
   position: relative;
 }
-#page1>video {
+#page1 > video {
   height: 100%;
   width: 100%;
   object-fit: cover;
