--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
   font-family: b;
   src: url('./fonts/KFOlCnqEu92Fr1MmEU9fBBc4\\(1\).ttf');
 }
+@font-face {
+  font-family: c;
+  src: url('./fonts/KFOmCnqEu92Fr1Mu4mxK\\(1\).ttf');
+}
 #page1 {
   height: 100vh;
   width: 100vw;
