feat: styles added to nav in page 1

--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ body {
   width: 100%;
   object-fit: cover;
 }
+#page1 > nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 30px;
+  position: absolute;
+  height: 10vh;
+  width: 100vw;
+}
