--- a/style.css
+++ b/style.css
@@ -48,3 +48,12 @@ body {
   margin-top: -1.7vw;
   width: 9%;
 }
+#right-nav > button {
+  padding: 10px 20px;
+  border-radius: 50px;
+  background-color: #0b48ed;
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: a;
+  font-size: 15px;
+}
