--- a/style.css
+++ b/style.css
@@ -57,3 +57,11 @@ body {
   font-family: a;
   font-size: 15px;
 }
+
+.bottom-page1 {
+  position: absolute;
+  bottom: 5%;
+  height: 35vh;
+  width: 50vw;
+  left: 10%;
+}
