feat: more styles added to bottom page1 inner

--- a/style.css
+++ b/style.css
@@ -78,3 +78,9 @@ body {
   height: 35%;
   width: 100%;
 }
+.bottom-page1-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: a;
+}
