--- a/style.css
+++ b/style.css
@@ -98,3 +98,16 @@ body {
   font-weight: 100;
   color: #fff;
 }
+#page2{
+  display: flex;
+  align-items: start;
+  font-family: a;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  padding: 0vw 8vw;
+  color: #fff;
+  background-color: #0a3cce;
+}
