--- a/style.css
+++ b/style.css
@@ -115,3 +115,10 @@ body {
   margin-bottom: 3vw;
   font-weight: 100;
 }
+#page2>h1{
+  font-weight: 100;
+  line-height: 1.3;
+  width: 90%;
+  font-size: 4vw;
+  color: #dadada69;
+}
